--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -21,6 +21,11 @@
       <groupId>io.camunda.connector</groupId>
       <artifactId>spring-boot-starter-camunda-connectors</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.camunda.spring</groupId>
+      <artifactId>spring-boot-starter-camunda-test</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -48,5 +53,46 @@
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>build-image</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>build-version</id>
+                <goals>
+                  <goal>build-image</goal>
+                </goals>
+                <phase>package</phase>
+                <configuration>
+                  <image>
+                    <name>ghcr.io/camunda-community-hub/script-connector/runtime:${project.version}
+                    </name>
+                  </image>
+                </configuration>
+              </execution>
+              <execution>
+                <id>build-latest</id>
+                <goals>
+                  <goal>build-image</goal>
+                </goals>
+                <phase>package</phase>
+                <configuration>
+                  <image>
+                    <name>ghcr.io/camunda-community-hub/script-connector/runtime</name>
+                  </image>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
 </project>
