--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,9 @@
 name: Build, test and deploy artifacts with Maven
 on:
-  workflow_dispatch: { }
   release:
     types: [ published ]
   push:
-    branches: [ master ]
+    branches: [ main ]
 jobs:
   publish-maven:
     runs-on: ubuntu-latest
