moved to latest groovy

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     <version.camunda-spring>8.5.13</version.camunda-spring>
     <version.camunda-connectors>8.6.2</version.camunda-connectors>
 
-    <version.groovy>2.4.21</version.groovy>
+    <version.groovy>4.0.23</version.groovy>
     <version.kotlin>1.9.25</version.kotlin>
     <version.graalvm>23.0.5</version.graalvm>
 
@@ -113,9 +113,10 @@
         <version>${version.camunda-connectors}</version>
       </dependency>
       <dependency>
-        <groupId>org.codehaus.groovy</groupId>
+        <groupId>org.apache.groovy</groupId>
         <artifactId>groovy-all</artifactId>
         <version>${version.groovy}</version>
+        <type>pom</type>
       </dependency>
       <dependency>
         <groupId>org.graalvm.js</groupId>
