add -B to maven command

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
       id: release
     - name: Build docker image
-      run: mvn clean package -DskipTests -Pbuild-image
+      run: mvn clean package -DskipTests -Pbuild-image -B
     - name: Push docker images
       run: docker push -a -q ghcr.io/camunda-community-hub/script-connector/runtime
     - if: github.event.release
