--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 
     <version.groovy>4.0.23</version.groovy>
     <version.kotlin>1.9.25</version.kotlin>
-    <version.graalvm>23.0.5</version.graalvm>
+    <version.graalvm>24.1.1</version.graalvm>
 
     <plugin.version.function-maven-plugin>0.11.0</plugin.version.function-maven-plugin>
     <plugin.version.maven-enforcer-plugin>3.5.0</plugin.version.maven-enforcer-plugin>
@@ -119,9 +119,15 @@
         <type>pom</type>
       </dependency>
       <dependency>
-        <groupId>org.graalvm.js</groupId>
+        <groupId>org.graalvm.polyglot</groupId>
+        <artifactId>polyglot</artifactId>
+        <version>${version.graalvm}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.graalvm.polyglot</groupId>
         <artifactId>js</artifactId>
         <version>${version.graalvm}</version>
+        <type>pom</type>
       </dependency>
       <dependency>
         <groupId>org.graalvm.js</groupId>
