--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,7 @@
   "extends": [
     "config:recommended",
     ":automergeMinor",
-    ":automergePatch"
+    ":automergePatch",
+    "schedule:automergeNonOfficeHours"
   ]
 }
