--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -28,6 +28,7 @@
     </dependency>
   </dependencies>
   <build>
+    <finalName>${artifactId}</finalName>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
