--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         compose-file: "./docker/docker-compose.yml"
         test-command: "java -jar runtime/target/script-connector-runtime.jar"
     - name: try to run connector runtime
-      run: java -jar runtime/target/script-connector-runtime.jar
+      run: java -jar runtime/target/script-connector-runtime.jar test
     - name: Publish Unit Test Results
       id: publish
       uses: EnricoMi/publish-unit-test-result-action@v2
