--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Deploy SNAPSHOT / Release
       uses: camunda-community-hub/community-action-maven-release@v1
       with:
-        maven-additional-options: -P!autoFormat
+        maven-additional-options: -P!autoFormat -Pbuild-image
         release-version: ${{ github.event.release.tag_name }}
         nexus-usr: ${{ secrets.NEXUS_USR }}
         nexus-psw: ${{ secrets.NEXUS_PSW }}
