--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Deploy SNAPSHOT / Release
       uses: camunda-community-hub/community-action-maven-release@v1
       with:
-        maven-additional-options: -P!autoFormat -Pbuild-image
+        maven-additional-options: -P!autoFormat
         release-version: ${{ github.event.release.tag_name }}
         nexus-usr: ${{ secrets.NEXUS_USR }}
         nexus-psw: ${{ secrets.NEXUS_PSW }}
@@ -47,6 +47,11 @@ jobs:
         maven-auto-release-after-close: true
         github-token: ${{ secrets.GITHUB_TOKEN }}
       id: release
+    - if: github.event.release
+      name: Set artefact version to release version
+      env:
+        TAG_NAME: ${{ github.event.release.tag_name }}
+      run: mvn versions:set -DnewVersion=${TAG_NAME}
     - name: Build docker image
       run: mvn clean package -DskipTests -Pbuild-image -B
     - name: Push docker images
