--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -20,7 +20,7 @@
       <artifactId>spring-boot-starter-camunda-connectors</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.camunda.spring</groupId>
+      <groupId>io.camunda</groupId>
       <artifactId>spring-boot-starter-camunda-test</artifactId>
       <scope>test</scope>
     </dependency>
