--- a/connector/pom.xml
+++ b/connector/pom.xml
@@ -71,7 +71,7 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>io.camunda.spring</groupId>
+      <groupId>io.camunda</groupId>
       <artifactId>spring-boot-starter-camunda-test</artifactId>
       <scope>test</scope>
     </dependency>
@@ -106,10 +106,19 @@
       <plugin>
         <groupId>io.camunda.connector</groupId>
         <artifactId>element-template-generator-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>generate-templates</goal>
+            </goals>
+          </execution>
+        </executions>
         <configuration>
-          <connectorClasses>
-            <connectorClass>io.camunda.community.connector.script.ScriptConnector</connectorClass>
-          </connectorClasses>
+          <connectors>
+            <connector>
+              <connectorClass>io.camunda.community.connector.script.ScriptConnector</connectorClass>
+            </connector>
+          </connectors>
         </configuration>
       </plugin>
     </plugins>
